welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
    ecritMessage()
    ^ColumnByColumn:10: error: value && is not a member of Int
  while(!(x=7 && y=0))
              ^ColumnByColumn:10: error: value unary_! is not a member of Unit
  while(!(x=7 && y=0))
        ^